updated the website v2

--- a/index.html
+++ b/index.html
@@ -45,14 +45,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container wrapper">
     <div class="row">
-      <div class="twelve columns social-links">
-        <div class="btn-group">
-          <a class="btn btn-default" href="https://www.facebook.com/Aitchison-College-Model-United-Nations-Society-ACMUN-280824698715131/"><i class="fa fa-facebook-official"></i></a>
-          <a class="btn btn-default" href="#"><i class="fa fa-instagram"></i></a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
       <div id="particles-js"></div>
 
       <div class="twelve columns nav-bar">
@@ -119,17 +111,26 @@
         </nav>        
       </div>
     </div>
-    <div class="row">
+    <div class="row slides">
+      <div class="slide-wrap">
+        <div class="slide-head">
+          <span>ACMUN</span>
+        </div>
+      </div>
       <div class="twelve columns big-image">
         <ul class="bxslider">
-          <li><img src="images/bg2.jpg" /></li>
-          <li><img src="images/bg4.jpg" /></li>
-          <li><img src="images/bg3.jpg" /></li>
-          <li><img src="images/bg2.jpg" /></li>
-          <li><img src="images/bg4.jpg" /></li>
-          <li><img src="images/bg3.jpg" /></li>
-          <li><img src="images/bg2.jpg" /></li>
-          <li><img src="images/bg2.jpg" /></li>
+          <li><img src="images/bg/crop-1.jpg" /></li>
+          <li><img src="images/bg/crop-2.jpg" /></li>
+          <li><img src="images/bg/crop-3.jpg" /></li>
+          <li><img src="images/bg/crop-4.jpg" /></li>
+          <li><img src="images/bg/crop-5.jpg" /></li>
+          <li><img src="images/bg/crop-6.jpg" /></li>
+          <li><img src="images/bg/crop-7.jpg" /></li>
+          <li><img src="images/bg/crop-8.jpg" /></li>
+          <li><img src="images/bg/crop-9.jpg" /></li>
+          <li><img src="images/bg/crop-10.jpg" /></li>
+          <li><img src="images/bg/crop-11.jpg" /></li>
+
         </ul>
       </div>
     </div>
@@ -233,7 +234,10 @@
     </div>
     <div class="row">
       <div class="twelve columns footer">
-        <p>© Copyright 2015, ACMUN society. Created by <a href="http://yasoob.me">Muhammad Yasoob Ullah Khalid</a>.</p>
+        <p>© Copyright 2015, ACMUN society. Created by <a href="http://yasoob.me">Muhammad Yasoob Ullah Khalid</a>.
+          <a class="btn btn-default" href="https://www.facebook.com/Aitchison-College-Model-United-Nations-Society-ACMUN-280824698715131/"><i class="fa fa-facebook-official"></i></a>
+          <a class="btn btn-default" href="#"><i class="fa fa-instagram"></i></a></p>
+    </div>
       </div>
     </div>
   </div>
