--- a/coming-soon.html
+++ b/coming-soon.html
@@ -45,14 +45,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container wrapper">
     <div class="row">
-      <div class="twelve columns social-links">
-        <div class="btn-group">
-          <a class="btn btn-default" href="https://www.facebook.com/Aitchison-College-Model-United-Nations-Society-ACMUN-280824698715131/"><i class="fa fa-facebook-official"></i></a>
-          <a class="btn btn-default" href="#"><i class="fa fa-instagram"></i></a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
       <div id="particles-js"></div>
 
       <div class="twelve columns nav-bar">
@@ -83,19 +75,32 @@
                     <a href="#">General Assembly</a>
                     <ul class="sub-sub-menu">
                       <li><a href="committees/general-assembly.html">Disarmament and International Security Committee</a></li>
-                      <li><a href="coming-soon-committee.html">Social, Humanitarian and Cultural Committee</a></li>
+                      <li><a href="coming-soon-committee.html">Social, Cultural and Humanitarian Committee</a></li>
                       <li><a href="coming-soon-committee.html">Special Political and Decolonization Committee</a></li>
                     </ul>
                   </li>
-                  <li><a href="coming-soon-committee.html">Specialised Agencies</a></li>
+                  <li>
+                    <a href="coming-soon-committee.html">Specialised Agencies</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="committees/general-assembly.html">United Nations Security Council</a></li>
+                      <li><a href="coming-soon-committee.html">Futurisitic Security Council</a></li>
+                    </ul>
+                  </li>
                   <li>
                      <a href="#">Economic & Social Council</a>
                      <ul class="sub-sub-menu">
-                       <li><a href="coming-soon-committee.html">DISEC</a></li>
-                       <li><a href="coming-soon-committee.html">SOHCUM</a></li>
+                       <li><a href="coming-soon-committee.html">United Nations Human Rights Council</a></li>
+                       <li><a href="coming-soon-committee.html">United Nations Commission on the Status of Women</a></li>
                      </ul>
                   </li>
-                  <li><a href="coming-soon-committee.html">Independent Bodies</a></li>
+                  <li>
+                    <a href="coming-soon-committee.html">Independent Bodies</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="coming-soon-committee.html">International Atomic Energy Agency</a></li>
+                      <li><a href="coming-soon-committee.html">European Union</a></li>
+                      <li><a href="coming-soon-committee.html">Crisis cabinet of Pakistan</a></li>
+                    </ul>
+                  </li>
                 </ul>
             </li>
             <li>
@@ -116,7 +121,7 @@
             </li>
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
-        </nav>        
+        </nav>          
       </div>
     </div>
     <div class="row">
