--- a/index.html
+++ b/index.html
@@ -75,19 +75,32 @@
                     <a href="#">General Assembly</a>
                     <ul class="sub-sub-menu">
                       <li><a href="committees/general-assembly.html">Disarmament and International Security Committee</a></li>
-                      <li><a href="coming-soon-committee.html">Social, Humanitarian and Cultural Committee</a></li>
+                      <li><a href="coming-soon-committee.html">Social, Cultural and Humanitarian Committee</a></li>
                       <li><a href="coming-soon-committee.html">Special Political and Decolonization Committee</a></li>
                     </ul>
                   </li>
-                  <li><a href="coming-soon-committee.html">Specialised Agencies</a></li>
+                  <li>
+                    <a href="coming-soon-committee.html">Specialised Agencies</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="committees/general-assembly.html">United Nations Security Council</a></li>
+                      <li><a href="coming-soon-committee.html">Futurisitic Security Council</a></li>
+                    </ul>
+                  </li>
                   <li>
                      <a href="#">Economic & Social Council</a>
                      <ul class="sub-sub-menu">
-                       <li><a href="coming-soon-committee.html">DISEC</a></li>
-                       <li><a href="coming-soon-committee.html">SOHCUM</a></li>
+                       <li><a href="coming-soon-committee.html">United Nations Human Rights Council</a></li>
+                       <li><a href="coming-soon-committee.html">United Nations Commission on the Status of Women</a></li>
                      </ul>
                   </li>
-                  <li><a href="coming-soon-committee.html">Independent Bodies</a></li>
+                  <li>
+                    <a href="coming-soon-committee.html">Independent Bodies</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="coming-soon-committee.html">International Atomic Energy Agency</a></li>
+                      <li><a href="coming-soon-committee.html">European Union</a></li>
+                      <li><a href="coming-soon-committee.html">Crisis cabinet of Pakistan</a></li>
+                    </ul>
+                  </li>
                 </ul>
             </li>
             <li>
