--- a/committees/general-assembly.html
+++ b/committees/general-assembly.html
@@ -52,15 +52,15 @@
         </div>
         <nav>
           <ul>
-            <li><a class="active" href="../index.html">Home</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
             <li>
                 <a href="#">About Us</a>
                 <ul class="sub-menu">
                   <div class="arrow"></div>
-                  <li><a href="../coming-soon-committee.html">Secretary General</a></li>
-                  <li><a href="../coming-soon-committee.html">Director General</a></li>
-                  <li><a href="../coming-soon-committee.html">Secretariat</a></li>
-                  <li><a href="../coming-soon-committee.html">Directors</a></li>
+                  <li><a href="coming-soon-committee.html">Secretary General</a></li>
+                  <li><a href="coming-soon-committee.html">Director General</a></li>
+                  <li><a href="coming-soon-committee.html">Secretariat</a></li>
+                  <li><a href="coming-soon-committee.html">Directors</a></li>
                 </ul>
             </li>
             <li>
@@ -70,39 +70,52 @@
                   <li>
                     <a href="#">General Assembly</a>
                     <ul class="sub-sub-menu">
-                      <li><a href="../committees/general-assembly.html">Disarmament and International Security Committee</a></li>
-                      <li><a href="../coming-soon-committee.html">Social, Humanitarian and Cultural Committee</a></li>
-                      <li><a href="../coming-soon-committee.html">Special Political and Decolonization Committee</a></li>
+                      <li><a href="committees/general-assembly.html">Disarmament and International Security Committee</a></li>
+                      <li><a href="coming-soon-committee.html">Social, Cultural and Humanitarian Committee</a></li>
+                      <li><a href="coming-soon-committee.html">Special Political and Decolonization Committee</a></li>
                     </ul>
                   </li>
-                  <li><a href="../coming-soon-committee.html">Specialised Agencies</a></li>
+                  <li>
+                    <a href="coming-soon-committee.html">Specialised Agencies</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="committees/general-assembly.html">United Nations Security Council</a></li>
+                      <li><a href="coming-soon-committee.html">Futurisitic Security Council</a></li>
+                    </ul>
+                  </li>
                   <li>
                      <a href="#">Economic & Social Council</a>
                      <ul class="sub-sub-menu">
-                       <li><a href="../coming-soon-committee.html">DISEC</a></li>
-                       <li><a href="../coming-soon-committee.html">SOHCUM</a></li>
+                       <li><a href="coming-soon-committee.html">United Nations Human Rights Council</a></li>
+                       <li><a href="coming-soon-committee.html">United Nations Commission on the Status of Women</a></li>
                      </ul>
                   </li>
-                  <li><a href="../coming-soon-committee.html">Independent Bodies</a></li>
+                  <li>
+                    <a href="coming-soon-committee.html">Independent Bodies</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="coming-soon-committee.html">International Atomic Energy Agency</a></li>
+                      <li><a href="coming-soon-committee.html">European Union</a></li>
+                      <li><a href="coming-soon-committee.html">Crisis cabinet of Pakistan</a></li>
+                    </ul>
+                  </li>
                 </ul>
             </li>
             <li>
                 <a href="#">Information</a>
                 <ul class="sub-menu">
                   <div class="arrow"></div>
-                  <li><a href="../coming-soon.html">Event Timeline</a></li>
-                  <li><a href="../files/FINAL-2.pdf">ACMUN VII Invite</a></li>
-                  <li><a href="../coming-soon.html">Schedule</a></li>
-                  <li><a href="../accomodation.html">Outstation Information</a></li>
-                  <li><a href="../expenses.html">expenses and deadlines</a></li>
-                  <li><a href="../files/ACMUNVI_SamplePositionPaper.pdf">Position Paper template</a></li>
-                  <li><a href="../coming-soon.html">Sample Draft Resolution</a></li>
+                  <li><a href="coming-soon.html">Event Timeline</a></li>
+                  <li><a href="files/FINAL-2.pdf">ACMUN VII Invite</a></li>
+                  <li><a href="coming-soon.html">Schedule</a></li>
+                  <li><a href="accomodation.html">Outstation Information</a></li>
+                  <li><a href="expenses.html">expenses and deadlines</a></li>
+                  <li><a href="files/ACMUNVI_SamplePositionPaper.pdf">Position Paper template</a></li>
+                  <li><a href="coming-soon.html">Sample Draft Resolution</a></li>
                 </ul>
             </li>
             <li>
                 <a href="https://docs.google.com/forms/d/1caVsZfLOj6u8vrhxfpdm4A1zSB2eYH9pRbnvi4jj1ag/viewform?ts=567e90ff&edit_requested=true">Registration</a>
             </li>
-            <li><a href="../contact.html">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </nav>
       </div>
