Add Documents and Sub Menus

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -81,28 +81,46 @@
 			<div class="container">
 				<div class="row">
 					<!-- Logo start -->
-					<div class="navbar-header">
-					    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					        <span class="sr-only">Toggle navigation</span>
-					        <span class="icon-bar"></span>
-					        <span class="icon-bar"></span>
-					        <span class="icon-bar"></span>
-					    </button>
-					    <div class="navbar-brand">
-						    <a href="index.html#" class="logo page-scroll">
-                                <img src="images/logo.png" style="width:50px;margin-top:-8px;"></img>
-                                <span class="span-styled" style="color:#f8ee00;">A</span><span class="span-styled" style="color:#3F51B5">C</span>MUN
-						    </a> 
-					    </div>                   
-					</div><!--/ Logo end -->
-					 <div class="collapse navbar-collapse clearfix navMenu" role="navigation">
+					  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <div class="navbar-brand">
+                        <a href="index.html#" class="logo page-scroll">
+                            <img src="images/logo.png" style="width:50px;margin-top:-8px;"></img>
+                            <span class="span-styled" style="color:#f8ee00;">A</span><span class="span-styled"
+                                                                                           style="color:#3F51B5">C</span>MUN
+                        </a>
+                    </div>
+                </div><!--/ Logo end -->
+                <div class="collapse navbar-collapse clearfix navMenu" role="navigation">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class=""><a class="page-scroll" href="/">Home</a></li>
+                        <li class=""><a class="page-scroll" href="#">Home</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="coming-soon.html">Executive Council</a></li>
+                                <li class="menu-item dropdown dropdown-submenu">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Executive Council</a>
+                                    <ul class="dropdown-menu">
+                                        <li class="menu-item ">
+                                            <a href="#">Secretary General</a>
+                                        </li>
+
+                                        <li class="menu-item ">
+                                            <a href="#">President</a>
+                                        </li>
+
+                                        <li class="menu-item ">
+                                            <a href="#">Director General</a>
+                                        </li>
+
+
+                                    </ul>
+                                </li>
                                 <li><a href="coming-soon.html">Secratariat</a></li>
                                 <li><a href="coming-soon.html">Directorate</a></li>
                             </ul>
@@ -113,11 +131,11 @@
                                aria-haspopup="true" aria-expanded="false">Information<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="coming-soon.html">Rules of Procedure</a></li>
-                                <li><a href="coming-soon.html">Position Paper Sample</a></li>
-                                <li><a href="coming-soon.html">Registration Guidelines</a></li>
+                                <li><a href="images/position-paper.docx">Position Paper Sample</a></li>
+                                <li><a href="images/registration-details-acmun-vii.docx">Registration Guidelines</a></li>
 
-                                <li><a href="coming-soon.html">Schedule</a></li>
-                                <li><a href="coming-soon.html">Draft Resolution Sample</a></li>
+                                <li><a href="images/schedule.pdf">Schedule</a></li>
+                                <li><a href="images/resolution.docx">Draft Resolution Sample</a></li>
                                 <li><a href="coming-soon.html">Outstation Information</a></li>
                             </ul>
                         </li>
