--- a/disec.html
+++ b/disec.html
@@ -110,7 +110,7 @@
                                 <li><a href="coming-soon.html">Position Paper Sample</a></li>
                                 <li><a href="coming-soon.html">Registration Guidelines</a></li>
 
-                                <li><a href="coming-soon.html">Schedule</a></li>
+                                <li><a href="images/schedule.pdf">Schedule</a></li>
                                 <li><a href="coming-soon.html">Draft Resolution Sample</a></li>
                                 <li><a href="coming-soon.html">Outstation Information</a></li>
                             </ul>
@@ -153,38 +153,27 @@
 <section id="section-committee-team" style="margin-bottom:100px;">
     <div class="container">
         <div class="row" style="text-align: center;">
-            <div class="col-md-4 col-xs-4">
+            <div class="col-md-4 col-xs-6 col-md-offset-2">
                 <div class="member-picture">
                     <img class="img-circle" src="images/avatar.jpg">
                 </div>
 
                 <div class="member-info">
                     <span class="member-name">Nafeel Irfan</span><br/>
-                    <span class="member-title">Director</span>
+                    <span class="member-title">Chair</span>
                 </div>
             </div>
 
-            <div class="col-md-4 col-xs-4">
-                <div class="member-picture">
-                    <img class="img-circle" src="images/avatar.jpg">
-                </div>
-
-                <div class="member-info">
-                    <span class="member-name">---</span><br>
-                    <span class="member-title">Assistant Director</span>
-                </div>
+            <div class="col-md-6 col-xs-6 committee-directors">
+               <h1>Directors</h1>
+                <hr/>
+                <ul>
+                    <li>Muhammad Osama</li>
+                    <li>Ibrahim Raza</li>
+                </ul>
             </div>
 
-            <div class="col-md-4 col-xs-4">
-                <div class="member-picture">
-                    <img class="img-circle" src="images/avatar.jpg">
-                </div>
 
-                <div class="member-info">
-                    <span class="member-name">---</span><br/>
-                    <span class="member-title">Assistant Director</span>
-                </div>
-            </div>
 
         </div>
     </div>
