--- a/index.html
+++ b/index.html
@@ -79,7 +79,24 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="coming-soon.html">Executive Council</a></li>
+                                <li class="menu-item dropdown dropdown-submenu">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Executive Council</a>
+                                    <ul class="dropdown-menu">
+                                        <li class="menu-item ">
+                                            <a href="#">Secretary General</a>
+                                        </li>
+
+                                        <li class="menu-item ">
+                                            <a href="#">President</a>
+                                        </li>
+
+                                        <li class="menu-item ">
+                                            <a href="#">Director General</a>
+                                        </li>
+
+
+                                    </ul>
+                                </li>
                                 <li><a href="coming-soon.html">Secratariat</a></li>
                                 <li><a href="coming-soon.html">Directorate</a></li>
                             </ul>
@@ -90,11 +107,11 @@
                                aria-haspopup="true" aria-expanded="false">Information<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="coming-soon.html">Rules of Procedure</a></li>
-                                <li><a href="coming-soon.html">Position Paper Sample</a></li>
-                                <li><a href="coming-soon.html">Registration Guidelines</a></li>
+                                <li><a href="images/position-paper.docx">Position Paper Sample</a></li>
+                                <li><a href="images/registration-details-acmun-vii.docx">Registration Guidelines</a></li>
 
-                                <li><a href="coming-soon.html">Schedule</a></li>
-                                <li><a href="coming-soon.html">Draft Resolution Sample</a></li>
+                                <li><a href="images/schedule.pdf">Schedule</a></li>
+                                <li><a href="images/resolution.docx">Draft Resolution Sample</a></li>
                                 <li><a href="coming-soon.html">Outstation Information</a></li>
                             </ul>
                         </li>
@@ -132,7 +149,8 @@
                         </h1>
 
                         <h2 class="wow slideInRight animated"
-                            style="visibility: visible; animation-name: slideInRight;">10 Committees. 4 Days. One Event</h2>
+                            style="visibility: visible; animation-name: slideInRight;">10 Committees. 4 Days. One
+                            Event</h2>
                         <h2 class="wow slideInRight animated"
                             style="visibility: visible; animation-name: slideInRight;">22nd - 25th September</h2>
 
@@ -255,7 +273,7 @@
 
 
                 <div class="feature-box col-md-3 col-sm-6 ">
-                    <a href="coming-soon.html">
+                    <a href="images/schedule.pdf">
                         <i class="icon icon-calendar"></i>
                         <h4 class="title">Schedule</h4>
                         <hr>
@@ -447,7 +465,8 @@
 
                         </ul>
                     </div>
-                    <a href="https://docs.google.com/forms/d/1caVsZfLOj6u8vrhxfpdm4A1zSB2eYH9pRbnvi4jj1ag/viewform?ts=567e90ff&edit_requested=true&fbzx=-8363281918841666000" class="btn btn-primary">Register</a>
+                    <a href="https://docs.google.com/forms/d/1caVsZfLOj6u8vrhxfpdm4A1zSB2eYH9pRbnvi4jj1ag/viewform?ts=567e90ff&edit_requested=true&fbzx=-8363281918841666000"
+                       class="btn btn-primary">Register</a>
                 </div>
             </div> <!--  col end -->
 
@@ -463,7 +482,7 @@
                         <h3>150<sub>$</sub></h3>
                         <p>per team</p>
 
-                      <span style="color:white;font-size:18px;">International Delegate Fee is $100</span>
+                        <span style="color:white;font-size:18px;">International Delegate Fee is $100</span>
 
                     </div>
                     <div class="pricing-feature">
@@ -471,7 +490,8 @@
 
                         </ul>
                     </div>
-                    <a href="https://docs.google.com/forms/d/1caVsZfLOj6u8vrhxfpdm4A1zSB2eYH9pRbnvi4jj1ag/viewform?ts=567e90ff&edit_requested=true&fbzx=-8363281918841666000#" class="btn btn-primary">Register</a>
+                    <a href="https://docs.google.com/forms/d/1caVsZfLOj6u8vrhxfpdm4A1zSB2eYH9pRbnvi4jj1ag/viewform?ts=567e90ff&edit_requested=true&fbzx=-8363281918841666000#"
+                       class="btn btn-primary">Register</a>
                 </div>
             </div> <!--  col end -->
 
@@ -662,6 +682,8 @@
 <script type="text/javascript" src="js/custom.js"></script>
 <script>
 		new WOW().init();
+
+
 
 </script>
 
