--- a/sochum.html
+++ b/sochum.html
@@ -110,7 +110,7 @@
                                 <li><a href="coming-soon.html">Position Paper Sample</a></li>
                                 <li><a href="coming-soon.html">Registration Guidelines</a></li>
 
-                                <li><a href="coming-soon.html">Schedule</a></li>
+                                <li><a href="images/schedule.pdf">Schedule</a></li>
                                 <li><a href="coming-soon.html">Draft Resolution Sample</a></li>
                                 <li><a href="coming-soon.html">Outstation Information</a></li>
                             </ul>
